
	* libfreeipmi/src/fiid.h, libfreeipmi/src/fiid.c: Re-implemented
	with new, more abstract interface.

	* libfreeipmi/src/bit-ops.c (bits_extract, bits_merge): Add parameter checks.

	* libfreeipmi/src/bit-ops.c (bits_merge): Fix bit shifting bug.

	* libfreeipmi/src/: Support new fiid interface globally.
	
------------------------------------------------------------

2006-01-22  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/fiid.h, libfreeipmi/src/fiid.c: Various new API
	additions and bug fixes.

	* libfreeipmi/src/rmcp.h, libfreeipmi/src/rmcp.c: Begin support of
	new fiid interface.
	
2006-01-20  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/fiid.h, libfreeipmi/src/fiid.c
	(fiid_obj_verify): New function.

	* libfreeipmi/src/ipmi-debug.h, libfreeipmi/src/ipmi-debug.c
	(fiid_obj_dump, fiid_obj_dump_perror): Support new fiid interface.
	
2006-01-19  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/fiid.c (fiid_obj_create, fiid_obj_set_data,
	fiid_obj_get_data, fiid_obj_set_block, fiid_obj_get_block):
	Various bug fixes.

	* libfreeipmi/src/fiid.h, libfreeipmi/src/fiid.c
	(fiid_iterator_create, fiid_iterator_destroy, fiid_iterator_reset,
	fiid_iterator_next, fiid_iterator_end,
	fiid_iterator_max_field_len, fiid_iterator_key,
	fiid_iterator_set_field_len, fiid_iterator_get,
	fiid_iterator_get_data): New functions.
	
2006-01-18  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/fiid.h, libfreeipmi/src/fiid.c: Re-implemented
	with new, more abstract interface.

	* libfreeipmi/src/bit-ops.c (bits_extract, bits_merge): Add parameter checks.

	* libfreeipmi/src/bit-ops.c (bits_merge): Fix bit shifting bug.

	* Makefile.am, libfreeipmi/src/Makefile.am,
	libfreeipmi/src/freeipmi.h: Temporarily comment out all other code
	to begin testing.
	
------------------------------------------------------------
2006-01-20  Anand Babu  <ab@zresearch.com>

        * Applied Anand Avati's <avati@zresearch.com> patch for compiler